--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>camel-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.hawt</groupId>
+            <artifactId>hawtio-springboot</artifactId>
+            <version>2.0.0.fuse-sb2-7_10_0-00016-redhat-00001</version>
+        </dependency>
 
         <!-- Test -->
 
