--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,12 @@ server.address=0.0.0.0
 management.address=0.0.0.0
 
 # lets use a different management port in case you need to listen to HTTP requests on 8080
-management.server.port=8081
+#management.server.port=8081
 
 # disable all management enpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
+
+management.endpoints.web.exposure.include=hawtio,jolokia,health
+spring.jmx.enabled=true
+hawtio.authenticationEnabled=true
